--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,10 @@
     "minimum-stability" : "dev",
     "require": {
         "oat-sa/oatbox-extension-installer": "~1.1||dev-master",
-        "oat-sa/extension-tao-datauri": "~2.0.0"
+        "oat-sa/extension-tao-datauri": "~2.0.0",
+        "oat-sa/generis" : ">=14.0.0",
+        "oat-sa/tao-core" : ">=47.0.0",
+        "oat-sa/extension-tao-itemqti" : ">=27.0.0"
     },
     "autoload" : {
         "psr-4" : {
